# Aegis-X

./: .env.example  .gitignore  DUAL_PATHWAY_PIPELINES_DESIGN.md  Implementation.md  NOTES.md  README.md  allfiles.md  check_deepfake.py  day18_test_results.txt  diagnostics_day14.py  download_subset.py  evaluate_pipeline.py  learn.md  out.txt  pyproject.toml  questions.md  read.md  requirements-gpu.txt  requirements-main.txt  requirements.txt  run_dbg2.py  run_web.py  test4.py  verify_tools.py
core/: __init__.py  agent.py  base_tool.py  config.py  data_types.py  early_stopping.py  exceptions.py  forensic_summary.py  llm.py  memory.py  subprocess_proxy.py  subprocess_worker.py
core/tools/: c2pa_tool.py  corneal_tool.py  dct_tool.py  dct_tool2.py  freqnet_tool.py  geometry_tool.py  illumination_tool.py  registry.py  rppg_tool.py  sbi_tool.py  siglip_adapter_tool.py  univfd_tool.py  xception_tool.py
core/tools/freqnet/: __init__.py  calibration.py  fad_hook.py  preprocessor.py
downloads/: download_freqnet_models.py  download_model.py  siglip.py
test_data/: import_test.db  sig_test.db  test_memory.db
testing_tools/: test1.py  test2.py  test3.py
utils/: __init__.py  ensemble.py  image.py  logger.py  ollama_client.py  preprocessing.py  thresholds.py  video.py  vram_manager.py
web/: index.html  script.js  style.css
